# ComfyUI_DiffRhythm2

./: README.md  __init__.py  diffrhythm2node.py  pyproject.toml  requirements.txt
MW_utils/: hf_download.py
diffrhythm2/: cache_utils.py  cfm.py
diffrhythm2/backbones/: dit.py  flex_attention.py  llama_attention.py  llama_nar.py
diffrhythm2/bigvgan/: model.py  utils.py
diffrhythm2/g2p/: g2p_generation.py
diffrhythm2/g2p/g2p/: __init__.py  chinese_model_g2p.py  cleaners.py  mandarin.py  text_tokenizers.py
diffrhythm2/g2p/language_segmentation/: LangSegment.py
diffrhythm2/g2p/utils/: g2p.py
